# X-ray-DL-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
configs/: default.yaml
notebooks/: data_demo.ipynb  evaluations.ipynb
outputs/: train_metrics.txt
scripts/: train.sbatch  train_model.py
slurm_logs/: train-43928096.err  train-43928096.out
src/my_dl_project/training/: trainer.py
src/xray_project/: __init__.py  models.py  train_model.py
src/xray_project/dataset/: __init__.py  xray_dataset.py
